fixing spacing on home page

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -6,7 +6,7 @@ $mac-lightgray: #E9E9E9;
 
 #controller_home{
   background: #FFF;
-  height: 90%px;
+  height: 100%;
   top: -60px; 
   position: relative;
   background-image: url("sockmonkey2.png");
@@ -29,7 +29,7 @@ $mac-lightgray: #E9E9E9;
 }
 
 .name{
-  margin-top: 300px;
+  margin-top: 25%;
   height: 100px;
   line-height: 100px;
   font-family: 'Lato', sans-serif;
@@ -136,7 +136,7 @@ $mac-lightgray: #E9E9E9;
   background: $mac-lightgray;
   border-radius: 100%;
   z-index: 0;
-  margin-top: 75px;
+  margin-top: 50px;
 }
 
 .fa-gift {
@@ -187,6 +187,7 @@ $mac-lightgray: #E9E9E9;
 .opt_text{
   padding-left: 20px;
   padding-right: 20px;
+  margin-bottom: 50px;
   
   p{
     font-size: 18px;
