--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -14,7 +14,7 @@ $mac-lightgray: #E9E9E9;
 }
 
 #controller_users.user-show-banner{
-  height:300px;
+  height:100%;
   width:100%;
   background-color:$mac-blue;
   margin-top:-60px;
